# tmcat-design

./: README.md  pyproject.toml
data/: 01_ligandGA-Pd.out  01_ligandGA-Pd.sqlite  02_graphGA-Pd.out  02_graphGA-Pd.sqlite  03_graphGASA-Pd.out  03_graphGASA-Pd.sqlite  04_graphGASA-Cu.out  05_graphGA-Ag.out  README.md
scripts/: 01_run-LigandGA.py  02_run-GraphGA.py  03_run-GraphGA-SA.py  04_run-GraphGA-SA-Cu.py  05_run-GraphGA-Ag.py
smiles/: above_ligand_combination.smi  above_target.smi  below_ligand_combination.smi  below_ligand_combination_cut50.smi  below_ligand_combination_mutate.smi  below_target.smi  below_target_mols.smi  filtered-csd-ligands.smi  ligands.smi  pd-starting-population.smi  starting-population-symmetric.smi
suzuki/: __init__.py  suzuki.py
